--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,11 +14,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="PfI-jZ-W02">
-                                <rect key="frame" x="157" y="60" width="100" height="382"/>
+                                <rect key="frame" x="146.66666666666666" y="99" width="100" height="382"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qT5-XK-RNC">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -39,12 +39,15 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkA-TY-S8P">
-                                <rect key="frame" x="133.33333333333331" y="501.66666666666669" width="147.33333333333331" height="34.333333333333314"/>
+                                <rect key="frame" x="111.33333333333333" y="583.66666666666663" width="170.33333333333337" height="34.333333333333371"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Start Button">
+                                <buttonConfiguration key="configuration" style="plain" title="Start">
                                     <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="mHG-xg-KT5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -57,10 +60,16 @@
                             <constraint firstItem="fkA-TY-S8P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="p5K-Yr-auS"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLightView" destination="jw4-uS-9F3" id="tv7-gb-k6y"/>
+                        <outlet property="redLightView" destination="qT5-XK-RNC" id="sXg-jY-W1N"/>
+                        <outlet property="startButton" destination="fkA-TY-S8P" id="WyE-Wu-bHR"/>
+                        <outlet property="yellowLightView" destination="0Qd-iS-79t" id="TUs-Eh-9fp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-353" y="24"/>
+            <point key="canvasLocation" x="-567" y="24"/>
         </scene>
     </scenes>
     <resources>
