--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,32 +14,31 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="PfI-jZ-W02">
-                                <rect key="frame" x="146.66666666666666" y="99" width="100" height="382"/>
+                                <rect key="frame" x="147" y="90" width="81" height="324.33333333333331"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qT5-XK-RNC">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="81" height="80.666666666666671"/>
                                         <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qT5-XK-RNC" secondAttribute="height" multiplier="1:1" id="1RV-hT-LLK"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Qd-iS-79t">
-                                        <rect key="frame" x="0.0" y="141" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="121.66666666666666" width="81" height="81"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jw4-uS-9F3">
-                                        <rect key="frame" x="0.0" y="282" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="243.66666666666666" width="81" height="80.666666666666657"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                     </view>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="XBQ-1B-aNn"/>
-                                    <constraint firstAttribute="height" constant="382" id="aHK-u6-B4S"/>
-                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkA-TY-S8P">
-                                <rect key="frame" x="111.33333333333333" y="583.66666666666663" width="170.33333333333337" height="34.333333333333371"/>
+                                <rect key="frame" x="106.33333333333333" y="543.66666666666663" width="162.33333333333337" height="34.333333333333371"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Start">
@@ -54,6 +53,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fkA-TY-S8P" secondAttribute="bottom" constant="200" id="5kh-j9-zw5"/>
+                            <constraint firstItem="PfI-jZ-W02" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.399582" id="9R7-fI-wPv"/>
                             <constraint firstItem="PfI-jZ-W02" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="H2T-Dy-Lt7"/>
                             <constraint firstItem="PfI-jZ-W02" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="RW0-an-sgh"/>
                             <constraint firstItem="fkA-TY-S8P" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="20:100" id="bJG-FC-vCB"/>
@@ -69,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-567" y="24"/>
+            <point key="canvasLocation" x="-1489" y="82"/>
         </scene>
     </scenes>
     <resources>
@@ -80,10 +80,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
